--- 5/17/2023
 -- Develop 1.9-pre1
  + Feature: The module loader path can now be changed
  + Feature: The user can now manually set the run through the tools module (return)
  + Feature: An error occurs when the script file is executed. The error location (line) is displayed

--- 5/10/2023
 -- Version 1.8.7
  + Feature: Module loader now supports RTLD_LAZY, RTLD_NOW, RTLD_GLOBAL and RTLD_LOCAL for dlopen (write the suffix in module mode file. e.g.: LAZY)

--- 5/9/2023
 -- SubVersion 1.8.6.1
  + Feature: new lmfswsapi.h, use it instead of using #include for every header file

--- 5/9/2023
 -- Patch 1.8.6-1
  - Fixed: some fatal bugs
  - Fixed: errors happen when compiling with flag -no-shared

--- 5/9/2023
 -- Version 1.8.6
  + Tool: New tool installconf-changer.py to help you make quick changes to build configuration files

--- 5/8/2023
 -- Version 1.8.5
  + Feature: Better cli arguments register (support register without long flag or description)
  + Feature: The new -v command-line argument is used to print LMFSWS compilation information

--- 5/4/2023
 -- Version 1.8.4
  + Feature: Add compiler information at LMFSWS HELLOTEXT

--- 5/4/2023
 -- Version 1.8.3
  + Feature: if the permission of shadow isnot 0644, LMFSWS will force quit immediately

--- 5/4/2023
 -- Version 1.8.2
  + Feature: deluser command in login module
  * Attention: login module is stable now

--- 5/4/2023
 -- Patch 1.8-2
  - Fixed: fatal errors in login.c

--- 5/4/2023
 -- Patch 1.8-1
  - Fixed: fatal errors in login.c
  * Changes: Use /usr instead of /usr/local in install_config.json

--- 5/4/2023
 -- Version 1.8
  + Feature: Security module: login (optional at compiling)
  - Removed: Nonsense text when LMFSWS initialization crashes
  * Changes: Move the default values of all variables in the build script to the 'install_config.json'